tests/fixtures/errors/struct_unknown_field.lox
# Access a field that the struct does not declare — must fail at typecheck.
struct Point { x: number, y: number }
var p = Point { x = 1, y = 2 };
var z = p.z;
assert(false, "should not reach: unknown field must have errored first");
